--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mipediatra_dev",
+  "name": "mipediatraweb",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,10 +9,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@headlessui/vue": "^1.7.3",
+    "@iconify/vue": "^4.1.0",
+    "@syncfusion/ej2-base": "^20.4.51",
+    "@syncfusion/ej2-vue-buttons": "^20.4.53",
+    "@syncfusion/ej2-vue-calendars": "^20.4.52",
+    "@syncfusion/ej2-vue-inputs": "^20.4.52",
+    "@syncfusion/ej2-vue-popups": "^20.4.53",
+    "apexcharts": "^3.36.0",
+    "firebase": "^9.17.2",
+    "pinia": "^2.0.33",
+    "sweetalert2": "^11.4.8",
+    "vue": "^3.2.41",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-router": "^4.1.5",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-perfect-scrollbar": "^1.6.0",
+    "vuefire": "^3.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vue/compiler-sfc": "^3.2.41",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.7.1",
+    "sass": "^1.59.2",
+    "sass-loader": "^13.1.0",
+    "tailwindcss": "^3.2.7",
+    "vite": "^3.1.8"
   }
 }
