--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.bulkynaden:mipediatralib:0.03'
+    implementation 'com.github.bulkynaden:mipediatralib:dedbf37'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
