--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@headlessui/vue": "^1.7.3",
     "@iconify/vue": "^4.1.0",
     "@syncfusion/ej2-base": "^21.1.40",
+    "@syncfusion/ej2-data": "^21.1.38",
     "@syncfusion/ej2-vue-buttons": "^21.1.37",
     "@syncfusion/ej2-vue-calendars": "^21.1.41",
     "@syncfusion/ej2-vue-dropdowns": "^21.1.35",
     "@syncfusion/ej2-vue-inputs": "^21.1.39",
     "@syncfusion/ej2-vue-popups": "^21.1.41",
+    "animate.css": "^4.1.1",
     "apexcharts": "^3.36.0",
     "firebase": "^9.17.2",
     "pinia": "^2.0.33",
