--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@syncfusion/ej2-vue-popups": "^21.1.41",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.36.0",
+    "cldr-data": "^36.0.1",
     "firebase": "^9.17.2",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.4.8",
