--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "vuefire": "^3.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/compiler-sfc": "^3.2.41",
