--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.17.2",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.4.8",
+    "vite-plugin-json5": "^1.0.5",
     "vue": "^3.2.41",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.1.5",
@@ -33,7 +34,6 @@
     "vuefire": "^3.1.0"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^6.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/compiler-sfc": "^3.2.41",
