--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,11 @@
     "@syncfusion/ej2-vue-dropdowns": "^21.1.35",
     "@syncfusion/ej2-vue-inputs": "^21.1.39",
     "@syncfusion/ej2-vue-popups": "^21.1.41",
+    "@syncfusion/ej2-vue-splitbuttons": "^21.1.41",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.36.0",
     "cldr-data": "^36.0.1",
-    "firebase": "^9.17.2",
+    "firebase": "^9.20.0",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.4.8",
     "vite-plugin-json5": "^1.0.5",
@@ -30,8 +31,7 @@
     "vue-router": "^4.1.5",
     "vue-sweetalert2": "^5.0.5",
     "vue3-apexcharts": "^1.4.1",
-    "vue3-perfect-scrollbar": "^1.6.0",
-    "vuefire": "^3.1.0"
+    "vue3-perfect-scrollbar": "^1.6.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
