--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@iconify/vue": "^4.1.0",
     "@syncfusion/ej2-base": "^21.1.40",
     "@syncfusion/ej2-data": "^21.1.38",
+    "@syncfusion/ej2-icons": "^21.1.37",
     "@syncfusion/ej2-vue-buttons": "^21.1.37",
     "@syncfusion/ej2-vue-calendars": "^21.1.41",
     "@syncfusion/ej2-vue-dropdowns": "^21.1.35",
