--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+spring.profiles.active=dev
 #Configuración del servidor
 server.port=8080
 server.servlet.context-path=/api
+server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.datasource.hikari.maximum-pool-size=2
+spring.jpa.mapping-resources=orm.xml
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
