--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=production
 #Configuración del servidor
 server.port=8080
 server.servlet.context-path=/api
