--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,3 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
