--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=production
+#spring.profiles.active=production
+spring.profiles.active=dev
 #Configuración del servidor
 server.port=8080
 server.servlet.context-path=/api
