--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=production
-spring.profiles.active=dev
+spring.profiles.active=production
+#spring.profiles.active=dev
 #Configuración del servidor
 server.port=8080
 server.servlet.context-path=/api
@@ -7,6 +7,7 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.datasource.hikari.maximum-pool-size=2
-spring.jpa.mapping-resources=orm.xml
+spring.jpa.mapping-resources=map.orm.xml
+spring.hibernate.mapping-resources=map.hbm.xml
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
