Finalizo DELETE de vacunas de paciente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=production
 #spring.profiles.active=dev
-#Configuración del servidor
+#Configuraciï¿½n del servidor
 server.port=8080
 server.servlet.context-path=/api
 server.error.include-message=always
