Mejora procesamiento de fotos y cambio de servidor API

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.datasource.url=jdbc:postgresql://horton.db.elephantsql.com/irlwpcee
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
