--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -3,3 +3,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://horton.db.elephantsql.com/irlwpcee
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=${SSL_PASSWORD}
+server.ssl.keyStoreType=JKS
+server.ssl.keyAlias=tomcat
